--- a/portfolio-parallax.html
+++ b/portfolio-parallax.html
@@ -103,15 +103,15 @@
               </span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="project2.html"><span class="rolling-text">Projects
+            <a class="nav-link" href="portfolio-sticky.html"><span class="rolling-text">Projects
               </span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="contact.html"><span class="rolling-text">Programes
+            <a class="nav-link" href="portfolio-parallax.html"><span class="rolling-text">Programes
               </span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="contact.html"><span class="rolling-text">Blogs
+            <a class="nav-link" href="blog-list.html"><span class="rolling-text">Blogs
               </span></a>
           </li>
           <li class="nav-item">
@@ -397,7 +397,7 @@
                             <a href="project1.html" class="sub-link">project1</a>
                           </li>
                           <li>
-                            <a href="project2.html" class="sub-link">project2</a>
+                            <a href="portfolio-sticky.html" class="sub-link">project2</a>
                           </li>
                           <li>
                             <a href="project3.html" class="sub-link">project3</a>
