--- a/project2.html
+++ b/project2.html
@@ -2,7 +2,7 @@
 <html lang="zxx">
 
 
-<!-- Mirrored from ui-themez.smartinnovates.net/items/infolio/Infolio/project2.html by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 04 Jul 2024 12:45:33 GMT -->
+<!-- Mirrored from ui-themez.smartinnovates.net/items/infolio/Infolio/portfolio-sticky.html by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 04 Jul 2024 12:45:33 GMT -->
 
 <head>
 
@@ -102,15 +102,15 @@
                 </span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="project2.html"><span class="rolling-text">Projects
+              <a class="nav-link" href="portfolio-sticky.html"><span class="rolling-text">Projects
                 </span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="contact.html"><span class="rolling-text">Programes
+              <a class="nav-link" href="portfolio-parallax.html"><span class="rolling-text">Programes
                 </span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="contact.html"><span class="rolling-text">Blogs
+              <a class="nav-link" href="blog-list.html"><span class="rolling-text">Blogs
                 </span></a>
             </li>
             <li class="nav-item">
@@ -399,7 +399,7 @@
                               <a href="project1.html" class="sub-link">project1</a>
                             </li>
                             <li>
-                              <a href="project2.html" class="sub-link">project2</a>
+                              <a href="portfolio-sticky.html" class="sub-link">project2</a>
                             </li>
                             <li>
                               <a href="project3.html" class="sub-link">project3</a>
@@ -723,7 +723,7 @@
                     </div>
                     <div>
                       <h6 class="sub-title fz-16 mb-5">Prev Project</h6>
-                      <a href="project2.html" class="fz-40 fw-600 stroke">OPT Media Agency</a>
+                      <a href="portfolio-sticky.html" class="fz-40 fw-600 stroke">OPT Media Agency</a>
                     </div>
                   </div>
                 </div>
@@ -734,7 +734,7 @@
                     <div class="cont d-flex align-items-center">
                       <div>
                         <h6 class="sub-title fz-16 mb-5">Next Project</h6>
-                        <a href="project2.html" class="fz-40 fw-600 stroke">TH3 Web Design</a>
+                        <a href="portfolio-sticky.html" class="fz-40 fw-600 stroke">TH3 Web Design</a>
                       </div>
                       <div>
                         <span class="ml-30 fz-30 ti-arrow-right"></span>
@@ -906,6 +906,6 @@
 </body>
 
 
-<!-- Mirrored from ui-themez.smartinnovates.net/items/infolio/Infolio/project2.html by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 04 Jul 2024 12:45:34 GMT -->
+<!-- Mirrored from ui-themez.smartinnovates.net/items/infolio/Infolio/portfolio-sticky.html by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 04 Jul 2024 12:45:34 GMT -->
 
 </html>
