--- a/services.html
+++ b/services.html
@@ -107,15 +107,15 @@
                 </span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="project2.html"><span class="rolling-text">Projects
+              <a class="nav-link" href="portfolio-sticky.html"><span class="rolling-text">Projects
                 </span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="contact.html"><span class="rolling-text">Programes
+              <a class="nav-link" href="portfolio-parallax.html"><span class="rolling-text">Programes
                 </span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="contact.html"><span class="rolling-text">Blogs
+              <a class="nav-link" href="blog-list.html"><span class="rolling-text">Blogs
                 </span></a>
             </li>
             <li class="nav-item">
@@ -404,7 +404,7 @@
                               <a href="project1.html" class="sub-link">project1</a>
                             </li>
                             <li>
-                              <a href="project2.html" class="sub-link">project2</a>
+                              <a href="portfolio-sticky.html" class="sub-link">project2</a>
                             </li>
                             <li>
                               <a href="project3.html" class="sub-link">project3</a>
@@ -672,124 +672,86 @@
 
 
 
-        <!-- ==================== Start price ==================== -->
+        <!-- ==================== Start Skills ==================== -->
 
-        <section class="price-hr section-padding">
+        <div class="my-skills2">
           <div class="container">
-            <div class="row">
-              <div class="col-lg-5 valign">
-                <div class="cont full-width md-mb50">
-                  <div>
-                    <h6 class="sub-title main-color mb-15 wow fadeIn">Over 150.000+ Clients</h6>
-                    <h3 class="d-slideup wow">
-                      <span class="sideup-text">
-                        <span class="up-text">Affordable pricing.</span>
-                      </span>
-                      <span class="sideup-text">
-                        <span class="up-text">Easy scaling.</span>
-                      </span>
-                    </h3>
-                    <div class="text mt-20">
-                      <p>We grow your brands
-                        through bold service
-                        we’re providing fusce vulputate eleifend sapien. Etiam sollicitudin,
-                        ipsum.</p>
+            <div class="sec-head text-center mb-80">
+              <h6 class="sub-title main-color mb-15">Our Portfolio</h6>
+              <h2>Our featured <span class="fw-200">projects</span></h2>
+            </div>
+            <div class="row md-marg">
+              <div class="col-lg-2 col-md-4 col-6">
+                <div class="item mb-30">
+                  <div class="box-bord main-bg">
+                    <div class="img">
+                      <img src="assets/imgs/resume/s1.png" alt="">
                     </div>
-                    <ul class="rest list-arrow mt-30 pt-30 bord-thin-top">
-                      <li>
-                        <span class="icon">
-                          <svg width="100%" height="100%" viewBox="0 0 9 8" fill="none"
-                            xmlns="http://www.w3.org/2000/svg">
-                            <path fill-rule="evenodd" clip-rule="evenodd"
-                              d="M7.71108 3.78684L8.22361 4.29813L7.71263 4.80992L4.64672 7.87832L4.13433 7.36688L6.87531 4.62335H1.11181H0.750039H0.388177L0.382812 0.718232H1.10645L1.11082 3.90005H6.80113L4.12591 1.22972L4.63689 0.718262L7.71108 3.78684Z"
-                              fill="#14cf93"></path>
-                          </svg>
-                        </span>
-                        <h6 class="inline fw-400">Amazing communication.</h6>
-                      </li>
-                      <li class="mt-10">
-                        <span class="icon">
-                          <svg width="100%" height="100%" viewBox="0 0 9 8" fill="none"
-                            xmlns="http://www.w3.org/2000/svg">
-                            <path fill-rule="evenodd" clip-rule="evenodd"
-                              d="M7.71108 3.78684L8.22361 4.29813L7.71263 4.80992L4.64672 7.87832L4.13433 7.36688L6.87531 4.62335H1.11181H0.750039H0.388177L0.382812 0.718232H1.10645L1.11082 3.90005H6.80113L4.12591 1.22972L4.63689 0.718262L7.71108 3.78684Z"
-                              fill="#14cf93"></path>
-                          </svg>
-                        </span>
-                        <h6 class="inline fw-400">Best trendinf designing experience.</h6>
-                      </li>
-                      <li class="mt-10">
-                        <span class="icon">
-                          <svg width="100%" height="100%" viewBox="0 0 9 8" fill="none"
-                            xmlns="http://www.w3.org/2000/svg">
-                            <path fill-rule="evenodd" clip-rule="evenodd"
-                              d="M7.71108 3.78684L8.22361 4.29813L7.71263 4.80992L4.64672 7.87832L4.13433 7.36688L6.87531 4.62335H1.11181H0.750039H0.388177L0.382812 0.718232H1.10645L1.11082 3.90005H6.80113L4.12591 1.22972L4.63689 0.718262L7.71108 3.78684Z"
-                              fill="#14cf93"></path>
-                          </svg>
-                        </span>
-                        <h6 class="inline fw-400">Email & Live chat.</h6>
-                      </li>
-                    </ul>
+                    <span class="value">95%</span>
                   </div>
+                  <h6 class="fz-18">UI / UX Design</h6>
                 </div>
               </div>
-              <div class="col-lg-6 offset-lg-1 valign">
-                <div class="full-width">
-                  <div class="item sub-bg radius-10 d-flex align-items-center mb-30">
-                    <div class="type">
-                      <div class="icon-img-60 mb-10">
-                        <img src="assets/imgs/icon-img/shape1.png" alt="">
-                      </div>
-                      <h5 class="fw-600">Advanced</h5>
+              <div class="col-lg-2 col-md-4 col-6">
+                <div class="item mb-30">
+                  <div class="box-bord main-bg">
+                    <div class="img">
+                      <img src="assets/imgs/resume/s2.png" alt="">
                     </div>
-                    <div class="cont ml-50">
-                      <ul class="dot-list rest">
-                        <li class="mb-10">Guarenteed quality control</li>
-                        <li class="mb-10">Top quality service</li>
-                        <li class="mb-10">Best experts at your lease</li>
-                        <li>7 days free</li>
-                      </ul>
-                    </div>
-                    <div class="mount ml-auto text-center">
-                      <h3 class="numb-font"><span class="fz-20">$</span> 19</h3>
-                      <div>
-                        <a href="page-contact.html" class="butn butn-md butn-bord radius-30">
-                          <span class="fz-13">Sign Up</span>
-                        </a>
-                      </div>
-                    </div>
+                    <span class="value">90%</span>
                   </div>
-                  <div class="item main-colorbg radius-10 text-dark d-flex align-items-center">
-                    <div class="type">
-                      <div class="icon-img-60 mb-10">
-                        <img src="assets/imgs/icon-img/shape03.png" alt="">
-                      </div>
-                      <h5 class="fw-600">Enterprise</h5>
+                  <h6 class="fz-18">Development</h6>
+                </div>
+              </div>
+              <div class="col-lg-2 col-md-4 col-6">
+                <div class="item mb-30">
+                  <div class="box-bord main-bg">
+                    <div class="img">
+                      <img src="assets/imgs/resume/s3.png" alt="">
                     </div>
-                    <div class="cont ml-50">
-                      <ul class="dot-list rest">
-                        <li class="mb-10">Guarenteed quality control</li>
-                        <li class="mb-10">Top quality service</li>
-                        <li class="mb-10">Best experts at your lease</li>
-                        <li>7 days free</li>
-                      </ul>
-                    </div>
-                    <div class="mount ml-auto text-center">
-                      <h3 class="numb-font"><span class="fz-20">$</span> 49</h3>
-                      <div>
-                        <a href="page-contact.html" class="butn butn-md butn-bord text-dark radius-30">
-                          <span class="fz-13">Sign Up</span>
-                        </a>
-                      </div>
-                    </div>
+                    <span class="value">85%</span>
                   </div>
+                  <h6 class="fz-18">Graphic Design</h6>
+                </div>
+              </div>
+              <div class="col-lg-2 col-md-4 col-6">
+                <div class="item mb-30">
+                  <div class="box-bord main-bg">
+                    <div class="img">
+                      <img src="assets/imgs/resume/s5.png" alt="">
+                    </div>
+                    <span class="value">84%</span>
+                  </div>
+                  <h6 class="fz-18">Sketch</h6>
+                </div>
+              </div>
+              <div class="col-lg-2 col-md-4 col-6">
+                <div class="item mb-30">
+                  <div class="box-bord main-bg">
+                    <div class="img">
+                      <img src="assets/imgs/resume/s4.png" alt="">
+                    </div>
+                    <span class="value">78%</span>
+                  </div>
+                  <h6 class="fz-18">WordPress</h6>
+                </div>
+              </div>
+              <div class="col-lg-2 col-md-4 col-6">
+                <div class="item mb-30">
+                  <div class="box-bord main-bg">
+                    <div class="img">
+                      <img src="assets/imgs/resume/s6.png" alt="">
+                    </div>
+                    <span class="value">85%</span>
+                  </div>
+                  <h6 class="fz-18">Graphic Design</h6>
                 </div>
               </div>
             </div>
           </div>
-        </section>
+        </div>
 
-        <!-- ==================== End price ==================== -->
+        <!-- ==================== End Skills ==================== -->
 
 
 
