--- a/index.html
+++ b/index.html
@@ -1078,7 +1078,7 @@
               <div class="row">
                 <div class="col-6 item ontop">
                   <div class="img">
-                    <img src="assets/imgs/brands/01.png" alt="">
+                    <img src="assets/imgs/brands/b1.png" alt="">
                   </div>
                   <span class="top-left">
                     <svg viewBox="0 0 23 23" fill="none" xmlns="http://www.w3.org/2000/svg"
@@ -1111,7 +1111,7 @@
                 </div>
                 <div class="col-6 item">
                   <div class="img">
-                    <img src="assets/imgs/brands/02.png" alt="">
+                    <img src="assets/imgs/brands/b2.png" alt="">
                   </div>
                   <span class="top-right">
                     <svg viewBox="0 0 23 23" fill="none" xmlns="http://www.w3.org/2000/svg"
@@ -1137,7 +1137,7 @@
                 <div class="col-lg-3 col-6 item empty">
                   <div class="text">
                     <h2 class="fz-80">6k<span class="fz-30">+</span></h2>
-                    <h6 class="sub-title">Satisfied Clients</h6>
+                    <h6 class="sub-title">Satisfied Partners</h6>
                   </div>
                   <span class="bottom-left">
                     <svg viewBox="0 0 23 23" fill="none" xmlns="http://www.w3.org/2000/svg"
@@ -1149,7 +1149,7 @@
                 </div>
                 <div class="col-lg-3 col-6 item">
                   <div class="img">
-                    <img src="assets/imgs/brands/03.png" alt="">
+                    <img src="assets/imgs/brands/b3.png" alt="">
                   </div>
                   <span class="top-right">
                     <svg viewBox="0 0 23 23" fill="none" xmlns="http://www.w3.org/2000/svg"
