--- a/portfolio-parallax.html
+++ b/portfolio-parallax.html
@@ -49,16 +49,17 @@
 
     <div class="loader-wrap-heading">
       <div class="load-text">
-        <span>L</span>
-        <span>o</span>
-        <span>a</span>
-        <span>d</span>
-        <span>i</span>
-        <span>n</span>
-        <span>g</span>
+        <span>M</span>
+        <span>U</span>
+        <span>T</span>
+        <span>Q</span>
+        <span>A</span>
+        <span>N</span>
+        <span>A</span>
       </div>
     </div>
   </div>
+
 
   <!-- ==================== End Loading ==================== -->
 
