--- a/services.html
+++ b/services.html
@@ -49,16 +49,17 @@
 
     <div class="loader-wrap-heading">
       <div class="load-text">
-        <span>L</span>
-        <span>o</span>
-        <span>a</span>
-        <span>d</span>
-        <span>i</span>
-        <span>n</span>
-        <span>g</span>
+        <span>M</span>
+        <span>U</span>
+        <span>T</span>
+        <span>Q</span>
+        <span>A</span>
+        <span>N</span>
+        <span>A</span>
       </div>
     </div>
   </div>
+
 
   <!-- ==================== End Loading ==================== -->
 
@@ -517,8 +518,158 @@
         </header>
 
         <!-- ==================== End Header ==================== -->
+        <!-- ==================== Start intro ==================== -->
 
+        <section class="page-intro section-padding">
+          <div class="container">
+            <div class="row">
+              <div class="col-lg-5 valign">
+                <div class="content md-mb50">
+                  <h6 class="sub-title main-color mb-15">About Company</h6>
+                  <h3 class="fw-600 mb-30">Design & Development, <span class="fw-300">Optimization</span> Agency</h3>
+                  <p>Whether you are a development agency looking to outsource design work, a company
+                    in search of a Product Designer or Product Team, a marketing agency that needs.
+                  </p>
+                  <a href="page-contact.html" class="butn butn-md butn-bord radius-30 mt-40">
+                    <span>Let's Contact</span>
+                  </a>
+                </div>
+              </div>
+              <div class="col-lg-7">
+                <div class="services">
+                  <div class="row">
+                    <div class="col-md-6">
+                      <div class="item-box radius-15 sm-mb30">
+                        <div class="icon mb-40 opacity-5">
+                          <img src="assets/imgs/serv-icons/3.png" alt="">
+                        </div>
+                        <h5 class="mb-15">Digital Design</h5>
+                        <p>Live workshop where we define the main problems and challenges before
+                          building.</p>
+                        <a href="page-services-details.html" class="rmore mt-30">
+                          <span class="sub-title">Read More</span>
+                          <img src="assets/imgs/arrow-right.png" alt="" class="icon-img-20 ml-5">
+                        </a>
+                      </div>
+                    </div>
+                    <div class="col-md-6">
+                      <div class="item-box radius-15">
+                        <div class="icon mb-40 opacity-5">
+                          <img src="assets/imgs/serv-icons/4.png" alt="">
+                        </div>
+                        <h5 class="mb-15">Web Development</h5>
+                        <p>Live workshop where we define the main problems and challenges before
+                          building.</p>
+                        <a href="page-services-details.html" class="rmore mt-30">
+                          <span class="sub-title">Read More</span>
+                          <img src="assets/imgs/arrow-right.png" alt="" class="icon-img-20 ml-5">
+                        </a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
 
+        <!-- ==================== End intro ==================== -->
+        <!-- ==================== Start Services ==================== -->
+
+        <section class="services-crev section-padding" data-scroll-index="1">
+          <div class="container">
+            <div class="sec-head mb-80">
+              <h6 class="sub-title main-color mb-25">Our Specialize</h6>
+              <div class="bord pt-25 bord-thin-top d-flex align-items-center">
+                <h2 class="fw-600 text-u ls1">What We <span class="fw-200"> Offer</span></h2>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-lg-6">
+                <div class="item-box mb-30">
+                  <div class="d-flex align-items-end">
+                    <div>
+                      <span class="num fz-20">01.</span>
+                      <div class="icon mr-80">
+                        <img src="assets/imgs/serv-icons/3.png" alt="">
+                      </div>
+                    </div>
+                    <div>
+                      <h5>UI/UX Design</h5>
+                      <div class="text mt-30">
+                        <p class="mb-80">It is a involves the systematic analysis of data to
+                          gain valuable insights into the various type aspects of a business.
+                        </p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-6">
+                <div class="item-box mb-30">
+                  <div class="d-flex align-items-end">
+                    <div>
+                      <span class="num fz-20">02.</span>
+                      <div class="icon mr-80">
+                        <img src="assets/imgs/serv-icons/4.png" alt="">
+                      </div>
+                    </div>
+                    <div>
+                      <h5>Digital Marketing</h5>
+                      <div class="text mt-30">
+                        <p class="mb-80">It is a involves the systematic analysis of data to
+                          gain valuable insights into the various type aspects of a business.
+                        </p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-6">
+                <div class="item-box md-mb30">
+                  <div class="d-flex align-items-end">
+                    <div>
+                      <span class="num fz-20">03.</span>
+                      <div class="icon mr-80">
+                        <img src="assets/imgs/serv-icons/5.png" alt="">
+                      </div>
+                    </div>
+                    <div>
+                      <h5>Web Developments</h5>
+                      <div class="text mt-30">
+                        <p class="mb-80">It is a involves the systematic analysis of data to
+                          gain valuable insights into the various type aspects of a business.
+                        </p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-6">
+                <div class="item-box">
+                  <div class="d-flex align-items-end">
+                    <div>
+                      <span class="num fz-20">04.</span>
+                      <div class="icon mr-80">
+                        <img src="assets/imgs/serv-icons/6.png" alt="">
+                      </div>
+                    </div>
+                    <div>
+                      <h5>Product Design</h5>
+                      <div class="text mt-30">
+                        <p class="mb-80">It is a involves the systematic analysis of data to
+                          gain valuable insights into the various type aspects of a business.
+                        </p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+
+        <!-- ==================== End Services ==================== -->
 
         <!-- ==================== Start Services ==================== -->
 
@@ -539,10 +690,6 @@
                   <h5 class="mb-15 text-u">Web <br> Development</h5>
                   <p>Live workshop where we define the main problems and challenges before
                     building a strategic plan moving forward.</p>
-                  <a href="page-services-details.html" class="rmore mt-30">
-                    <span class="sub-title">Read More</span>
-                    <img src="assets/imgs/arrow-right.png" alt="" class="icon-img-20 ml-5">
-                  </a>
                 </div>
               </div>
               <div class="col-lg-3 col-md-6 items">
@@ -553,10 +700,6 @@
                   <h5 class="mb-15 text-u">UI / UX <br> Designing</h5>
                   <p>Live workshop where we define the main problems and challenges before
                     building a strategic plan moving forward.</p>
-                  <a href="page-services-details.html" class="rmore mt-30">
-                    <span class="sub-title">Read More</span>
-                    <img src="assets/imgs/arrow-right.png" alt="" class="icon-img-20 ml-5">
-                  </a>
                 </div>
               </div>
               <div class="col-lg-3 col-md-6 items">
@@ -567,10 +710,6 @@
                   <h5 class="mb-15 text-u">Digital <br> Marketing</h5>
                   <p>Live workshop where we define the main problems and challenges before
                     building a strategic plan moving forward.</p>
-                  <a href="page-services-details.html" class="rmore mt-30">
-                    <span class="sub-title">Read More</span>
-                    <img src="assets/imgs/arrow-right.png" alt="" class="icon-img-20 ml-5">
-                  </a>
                 </div>
               </div>
               <div class="col-lg-3 col-md-6 items">
@@ -581,10 +720,6 @@
                   <h5 class="mb-15 text-u">Product <br> Design</h5>
                   <p>Live workshop where we define the main problems and challenges before
                     building a strategic plan moving forward.</p>
-                  <a href="page-services-details.html" class="rmore mt-30">
-                    <span class="sub-title">Read More</span>
-                    <img src="assets/imgs/arrow-right.png" alt="" class="icon-img-20 ml-5">
-                  </a>
                 </div>
               </div>
             </div>
@@ -755,87 +890,6 @@
 
 
 
-        <!-- ==================== Start Testimonials ==================== -->
-
-        <section class="testimonials-crev section-padding pb-0 bg-img" data-background="assets/imgs/background/2.jpg"
-          data-overlay-dark="5">
-          <div class="container">
-            <div class="row justify-content-end">
-              <div class="col-lg-10">
-                <div class="sec-head mb-80">
-                  <h2 class="fw-600 fz-70">What <br> People <span class="fw-200">Say?</span></h2>
-                </div>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-lg-11 position-re">
-                <div class="testim-swiper testim1" data-carousel="swiper" data-loop="true" data-space="30">
-                  <div id="content-carousel-container-unq-testim" class="swiper-container" data-swiper="container">
-                    <div class="swiper-wrapper">
-                      <div class="swiper-slide">
-                        <div class="item d-flex align-items-center">
-                          <div>
-                            <div class="fit-img circle">
-                              <img src="assets/imgs/testim/t1.jpg" alt="">
-                            </div>
-                          </div>
-                          <div class="content ml-100">
-                            <div class="text">
-                              <svg xmlns="http://www.w3.org/2000/svg" width="256.721" height="208.227"
-                                viewBox="0 0 256.721 208.227" id="null" class="qout-svg">
-                                <path id="Path_76570" data-name="Path 76570"
-                                  d="M-23.723-530.169v97.327H-121.05v-68.7q0-40.076,13.359-73.472T-62.845-639.9l36.259,28.625Q-63.8-570.244-68.57-530.169Zm158.395,0v97.327H37.345v-68.7q0-40.076,13.359-73.472T95.55-639.9l36.259,28.625Q94.6-570.244,89.825-530.169Z"
-                                  transform="translate(121.55 640.568)" fill="none" stroke="#fff" stroke-width="1"
-                                  opacity="0.322">
-                                </path>
-                              </svg>
-                              <h4>I have been hiring people in this
-                                space for a number of years
-                                and I have never seen this level of
-                                professionalism. It really feels like you are
-                                working with a team that can get the job
-                                done.</h4>
-                            </div>
-                            <div class="info d-flex align-items-center pt-40 mt-40 bord-thin-top">
-                              <div>
-                                <h5>Adam Beckley</h5>
-                                <span class="sub-title main-color">Envato Client</span>
-                              </div>
-                              <div class="ml-auto">
-                                <div class="rate-stars fz-14">
-                                  <span class="rate main-color">
-                                    <i class="fas fa-star"></i>
-                                    <i class="fas fa-star"></i>
-                                    <i class="fas fa-star"></i>
-                                    <i class="fas fa-star"></i>
-                                    <i class="fas fa-star"></i>
-                                  </span>
-                                </div>
-                              </div>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div class="swiper-arrow-control control-abslout">
-                  <div class="swiper-button-prev">
-                    <span class="ti-arrow-left"></span>
-                  </div>
-                  <div class="swiper-button-next">
-                    <span class="ti-arrow-right"></span>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </section>
-
-        <!-- ==================== End Testimonials ==================== -->
-
-
-
         <!-- ==================== Start process ==================== -->
 
         <section class="process section-padding">
@@ -844,12 +898,6 @@
               <h6 class="sub-title main-color mb-25">Our Process</h6>
               <div class="bord pt-25 bord-thin-top d-flex align-items-center">
                 <h2 class="fw-600">Business <span class="fw-200">Development</span></h2>
-                <div class="ml-auto">
-                  <a href="page-about2.html" class="go-more">
-                    <span class="text">View More</span>
-                    <span class="icon ti-arrow-top-right"></span>
-                  </a>
-                </div>
               </div>
             </div>
             <div class="row md-marg">
@@ -859,12 +907,6 @@
                 </div>
                 <h5 class="mb-15">Research</h5>
                 <p>Clarifying and translating insights into foundation and creative approach</p>
-                <div class="o-hidden">
-                  <a href="page-about2.html" class="rmore to-in mt-30">
-                    <span class="sub-title">Read More</span>
-                    <img src="assets/imgs/arrow-right.png" alt="" class="icon-img-20 ml-5">
-                  </a>
-                </div>
               </div>
               <div class="col-lg-3 col-md-6 item md-mb50">
                 <div class="icon-img-60 mb-30">
@@ -872,12 +914,6 @@
                 </div>
                 <h5 class="mb-15">Concept</h5>
                 <p>Clarifying and translating insights into foundation and creative approach</p>
-                <div class="o-hidden">
-                  <a href="page-about2.html" class="rmore to-in mt-30">
-                    <span class="sub-title">Read More</span>
-                    <img src="assets/imgs/arrow-right.png" alt="" class="icon-img-20 ml-5">
-                  </a>
-                </div>
               </div>
               <div class="col-lg-3 col-md-6 item sm-mb50">
                 <div class="icon-img-60 mb-30">
@@ -885,12 +921,6 @@
                 </div>
                 <h5 class="mb-15">Implement</h5>
                 <p>Clarifying and translating insights into foundation and creative approach</p>
-                <div class="o-hidden">
-                  <a href="page-about2.html" class="rmore to-in mt-30">
-                    <span class="sub-title">Read More</span>
-                    <img src="assets/imgs/arrow-right.png" alt="" class="icon-img-20 ml-5">
-                  </a>
-                </div>
               </div>
               <div class="col-lg-3 col-md-6 item">
                 <div class="icon-img-60 mb-30">
@@ -898,12 +928,6 @@
                 </div>
                 <h5 class="mb-15">Handover</h5>
                 <p>Clarifying and translating insights into foundation and creative approach</p>
-                <div class="o-hidden">
-                  <a href="page-about2.html" class="rmore to-in mt-30">
-                    <span class="sub-title">Read More</span>
-                    <img src="assets/imgs/arrow-right.png" alt="" class="icon-img-20 ml-5">
-                  </a>
-                </div>
               </div>
             </div>
           </div>
