--- a/portfolio-sticky.html
+++ b/portfolio-sticky.html
@@ -476,7 +476,7 @@
                         <div class="item mb-40">
                             <h6 class="sub-title mb-15 opacity-7">Contact Us</h6>
                             <h5><a href="#0">Hello@email.com</a></h5>
-                            <h5 class="underline mt-10"><a href="#0">+1 840 841 25 69</a></h5>
+                            <h5 class="underline mt-10"><a href="#0">+20 110 177 5645</a></h5>
                         </div>
                     </div>
                 </div>
@@ -623,7 +623,7 @@
                         </div>
 
                         <a href="#0" class="underline">
-                            <span class="fz-22 main-color">+2 456 (343) 24 45</span>
+                            <span class="fz-22 main-color">+20 110 177 5645</span>
                         </a>
                     </div>
                 </div>
