--- a/blog-list.html
+++ b/blog-list.html
@@ -89,7 +89,7 @@
       <div class="container">
 
         <!-- Logo -->
-        <a class="logo icon-img-120" href="#">
+        <a class="logo icon-img-120" href="index.html">
           <img src="assets/imgs/logo-light.png" alt="logo">
         </a>
 
@@ -481,7 +481,7 @@
               <div class="item mb-40">
                 <h6 class="sub-title mb-15 opacity-7">Contact Us</h6>
                 <h5><a href="#0">Hello@email.com</a></h5>
-                <h5 class="underline mt-10"><a href="#0">+1 840 841 25 69</a></h5>
+                <h5 class="underline mt-10"><a href="#0">+20 110 177 5645</a></h5>
               </div>
             </div>
           </div>
@@ -810,12 +810,12 @@
                   <div class="info mt-80 d-flex align-items-center">
                     <div>
                       <a href="#0" class="butn butn-md butn-bord-thin radius-30">
-                        <span class="text">Support@Website.com</span>
+                        <span class="text">support@mutqana.com</span>
                       </a>
                     </div>
                     <div>
                       <a href="#0" class="butn butn-md butn-bord-thin radius-30 ml-30">
-                        <span class="text">+2 456 (343) 24 45</span>
+                        <span class="text">+20 110 177 5645</span>
                       </a>
                     </div>
                   </div>
