--- a/services.html
+++ b/services.html
@@ -89,7 +89,7 @@
       <div class="container">
 
         <!-- Logo -->
-        <a class="logo icon-img-120" href="#">
+        <a class="logo icon-img-120" href="index.html">
           <img src="assets/imgs/logo-light.png" alt="logo">
         </a>
 
@@ -483,7 +483,7 @@
               <div class="item mb-40">
                 <h6 class="sub-title mb-15 opacity-7">Contact Us</h6>
                 <h5><a href="#0">Hello@email.com</a></h5>
-                <h5 class="underline mt-10"><a href="#0">+1 840 841 25 69</a></h5>
+                <h5 class="underline mt-10"><a href="#0">+20 110 177 5645</a></h5>
               </div>
             </div>
           </div>
@@ -1045,20 +1045,16 @@
                 <div class="social-media d-flex justify-content-end">
                   <ul class="rest d-flex align-items-center fz-14">
                     <li class="hover-this cursor-pointer">
-                      <a href="#0" class="hover-anim"><i class="fab fa-facebook-f mr-10"></i>
+                      <a href="https://www.facebook.com/mutqana" class="hover-anim"><i class="fab fa-facebook-f mr-10"></i>
                         Facebook</a>
                     </li>
                     <li class="hover-this cursor-pointer ml-50">
-                      <a href="#0" class="hover-anim"><i class="fab fa-dribbble mr-10"></i>
-                        Dribbble</a>
+                      <a href="https://x.com/mutqana?fbclid=IwY2xjawEPytJleHRuA2FlbQIxMAABHRwTk-5IdepeKGAAnMSPI5VBc2Vl8trQOEfZeVr9ty1PKGImY20T0J3wxg_aem_necVsm3tgNoN8Pt22YVzqA" class="hover-anim"><i class="fab fa-dribbble mr-10"></i>
+                        Twitter</a>
                     </li>
                     <li class="hover-this cursor-pointer ml-50">
-                      <a href="#0" class="hover-anim"><i class="fab fa-linkedin-in mr-10"></i>
+                      <a href="https://www.linkedin.com/company/mutqana/?viewAsMember=true" class="hover-anim"><i class="fab fa-linkedin-in mr-10"></i>
                         LinkedIn</a>
-                    </li>
-                    <li class="hover-this cursor-pointer ml-50">
-                      <a href="#0" class="hover-anim"><i class="fab fa-instagram mr-10"></i>
-                        Instagram</a>
                     </li>
                   </ul>
                 </div>
@@ -1079,12 +1075,12 @@
                   <div class="info mt-80 d-flex align-items-center">
                     <div>
                       <a href="#0" class="butn butn-md butn-bord-thin radius-30">
-                        <span class="text">Support@Website.com</span>
+                        <span class="text">support@mutqana.com</span>
                       </a>
                     </div>
                     <div>
                       <a href="#0" class="butn butn-md butn-bord-thin radius-30 ml-30">
-                        <span class="text">+2 456 (343) 24 45</span>
+                        <span class="text">+20 110 177 5645</span>
                       </a>
                     </div>
                   </div>
