--- a/showcase-carousel.html
+++ b/showcase-carousel.html
@@ -431,7 +431,7 @@
                         <div class="item mb-40">
                             <h6 class="sub-title mb-15 opacity-7">Contact Us</h6>
                             <h5><a href="#0">Hello@email.com</a></h5>
-                            <h5 class="underline mt-10"><a href="#0">+1 840 841 25 69</a></h5>
+                            <h5 class="underline mt-10"><a href="#0">+20 110 177 5645</a></h5>
                         </div>
                     </div>
                 </div>
